--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/styled-components": "^4.0.3",
+    "moment": "^2.22.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts-ts": "3.1.0"
+    "react-moment": "^0.8.3",
+    "react-scripts-ts": "3.1.0",
+    "styled-components": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
