--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-moment": "^0.8.3",
+    "react-redux": "^5.1.1",
     "react-scripts-ts": "3.1.0",
     "styled-components": "^4.0.3"
   },
