--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.9",
+    "@types/redux-logger": "^3.0.6",
     "@types/styled-components": "^4.0.3",
     "antd": "^3.10.4",
     "moment": "^2.22.2",
@@ -11,6 +13,8 @@
     "react-moment": "^0.8.3",
     "react-redux": "^5.1.1",
     "react-scripts-ts": "3.1.0",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "styled-components": "^4.0.3"
   },
   "scripts": {
