--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.1.1",
     "react-scripts-ts": "3.1.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "reselect": "^4.0.0",
     "styled-components": "^4.0.3"
   },
