--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "mimic": "^2.0.9",
     "typescript": "^3.1.6"
   }
 }
